# prax

./: .dockerignore  .editorconfig  .valgrind.supp  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  TODO.md  deny.toml  dhat-heap.json  docker-compose.yml
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.cursor/rules/: api-design.mdc  async-first.mdc  benchmarking.mdc  caching.mdc  changelog.mdc  documentation.mdc  error-handling.mdc  git-flow.mdc  multi-tenancy.mdc  no-skip-hooks.mdc  performance.mdc  profiling.mdc  readme.mdc  rust-2024.mdc  sql-safety.mdc  testing.mdc
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
.github/workflows/: benchmarks.yml  ci.yml  fuzz.yml  memory-check.yml  release.yml  security.yml
benches/: README.md  database_execution.rs  filter_operations.rs  orm_comparison.rs  query_builder.rs
docker/: README.md
docker/mysql/: init.sql
docker/postgres/: init.sql
docs/: README.md  angular.json  package.json  pnpm-lock.yaml
docs/src/: index.html  styles.css
docs/src/app/: app.html  app.routes.ts  app.ts
examples/: basic_queries.rs  logging_demo.rs  middleware.rs  multi_tenant.rs  prax.toml  profile_cache_branch.rs  profile_cpu.rs  profile_filter_allocations.rs  profile_memory.rs  profile_orm_comparison.rs  profile_size_analysis.rs  profile_tracing.rs  raw_sql.rs  relations.rs  schema.prax  schema_parsing.rs  seed.json  seed.rs  seed.sql  seed.toml  transactions.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/fuzz_config_parser/: basic
fuzz/corpus/fuzz_schema_parser/: enum  relations  simple_model
fuzz/dict/: schema.dict
fuzz/fuzz_targets/: config_parser.rs  filter_construction.rs  query_builder.rs  schema_parser.rs  schema_structured.rs  sql_builder.rs
prax-actix/: Cargo.toml  README.md
prax-actix/src/: lib.rs
prax-armature/: Cargo.toml  README.md
prax-armature/src/: lib.rs
prax-axum/: Cargo.toml  README.md
prax-axum/src/: lib.rs
prax-cli/: Cargo.toml  README.md
prax-cli/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
prax-cli/src/commands/: db.rs  format.rs  generate.rs  init.rs  introspect.rs  migrate.rs  mod.rs  seed.rs  validate.rs  version.rs
prax-cli/tests/: cli_tests.rs
prax-codegen/: Cargo.toml  README.md
prax-codegen/src/: lib.rs  schema_reader.rs  types.rs
prax-duckdb/: Cargo.toml  README.md
prax-duckdb/benches/: duckdb_operations.rs
prax-duckdb/src/: config.rs  connection.rs  engine.rs  error.rs  lib.rs  pool.rs  row.rs  types.rs
prax-migrate/: Cargo.toml  README.md
prax-migrate/src/: diff.rs  engine.rs  error.rs  file.rs  history.rs  introspect.rs  lib.rs  migration.rs  procedure.rs  resolution.rs  shadow.rs  sql.rs
prax-mongodb/: Cargo.toml  README.md
prax-mongodb/src/: client.rs  config.rs  document.rs  error.rs  filter.rs  lib.rs  types.rs  view.rs
prax-mssql/: Cargo.toml  README.md
prax-mssql/src/: config.rs  connection.rs  engine.rs  error.rs  lib.rs  pool.rs  rls.rs  row.rs  types.rs
prax-mysql/: Cargo.toml  README.md
prax-mysql/src/: config.rs  connection.rs  engine.rs  error.rs  lib.rs  pool.rs  row.rs  types.rs
prax-postgres/: Cargo.toml  README.md
prax-postgres/src/: config.rs  connection.rs  engine.rs  error.rs  lib.rs  pool.rs  row.rs  statement.rs  types.rs
prax-query/: Cargo.toml  README.md
prax-query/benches/: advanced_features_bench.rs  aggregation_bench.rs  async_bench.rs  database_bench.rs  mem_optimize_bench.rs  memory_profile_bench.rs  operations_bench.rs  pagination_bench.rs  tenant_bench.rs  throughput_bench.rs
prax-query/src/: advanced.rs  batch.rs  builder.rs  cache.rs  cte.rs  data.rs  db_optimize.rs  error.rs  extension.rs  filter.rs  intern.rs  introspection.rs  json.rs  lazy.rs  lib.rs  logging.rs  macros.rs  memory.rs  nested.rs  pagination.rs  partition.rs  pool.rs  procedure.rs  query.rs  raw.rs  replication.rs  row.rs  search.rs  security.rs  sequence.rs  sql.rs  static_filter.rs  traits.rs  transaction.rs  trigger.rs  typed_filter.rs  types.rs  upsert.rs  window.rs  zero_copy.rs
prax-query/src/async_optimize/: concurrent.rs  introspect.rs  mod.rs  pipeline.rs
prax-query/src/connection/: config.rs  env.rs  mod.rs  options.rs  parser.rs  pool.rs
prax-query/src/data_cache/: backend.rs  invalidation.rs  key.rs  memory.rs  mod.rs  options.rs  redis.rs  stats.rs  tiered.rs
prax-query/src/mem_optimize/: arena.rs  interning.rs  lazy.rs  mod.rs
prax-query/src/middleware/: chain.rs  context.rs  logging.rs  metrics.rs  mod.rs  retry.rs  timing.rs  types.rs
prax-query/src/operations/: aggregate.rs  count.rs  create.rs  delete.rs  find_first.rs  find_many.rs  find_unique.rs  mod.rs  update.rs  upsert.rs  view.rs
prax-query/src/profiling/: allocation.rs  heap.rs  leak_detector.rs  mod.rs  snapshot.rs
prax-query/src/relations/: include.rs  loader.rs  mod.rs  select.rs  spec.rs
prax-query/src/tenant/: cache.rs  config.rs  context.rs  middleware.rs  mod.rs  pool.rs  prepared.rs  resolver.rs  rls.rs  strategy.rs  task_local.rs
prax-schema/: Cargo.toml  README.md
prax-schema/benches/: ast_operations.rs  schema_parsing.rs  validation_bench.rs
prax-schema/src/: cache.rs  error.rs  lib.rs  validator.rs
prax-scylladb/: Cargo.toml  README.md
prax-scylladb/benches/: scylladb_operations.rs
prax-scylladb/src/: config.rs  connection.rs  engine.rs  error.rs  lib.rs  pool.rs  row.rs  types.rs
prax-sqlite/: Cargo.toml  README.md
prax-sqlite/benches/: sqlite_operations.rs
prax-sqlite/src/: config.rs  connection.rs  engine.rs  error.rs  lib.rs  pool.rs  row.rs  types.rs
prax-sqlx/: Cargo.toml  README.md
prax-sqlx/src/: config.rs  connection.rs  engine.rs  error.rs  lib.rs  macros.rs  mysql.rs  pool.rs  postgres.rs  row.rs  sqlite.rs  transaction.rs  types.rs
profile/: README.md  trace.json
scripts/: publish.sh  release.sh
src/: lib.rs
tests/: config_integration.rs  query_integration.rs  schema_integration.rs
(+129 files in other folders)
