[package]
name = "prax-actix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Actix-web framework integration for Prax ORM"
keywords = ["orm", "database", "actix", "web", "actor"]
categories = ["database", "web-programming"]

[dependencies]
prax-query = { workspace = true }
prax-postgres = { workspace = true, optional = true }
prax-mysql = { workspace = true, optional = true }
prax-sqlite = { workspace = true, optional = true }

# Actix
actix-web = "4"
actix-rt = "2"

# Async
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
tracing = { workspace = true }

[features]
default = ["postgres"]
postgres = ["prax-postgres"]
mysql = ["prax-mysql"]
sqlite = ["prax-sqlite"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

