[package]
name = "prax-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-safe query builder for the Prax ORM"
documentation = "https://docs.rs/prax-query"
keywords = ["orm", "query-builder", "database", "sql", "async"]
categories = ["database", "asynchronous"]

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
indexmap = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
pretty_assertions = { workspace = true }

[features]
default = []

