[package]
name = "prax-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-safe query builder for the Prax ORM"
documentation = "https://docs.rs/prax-query"
keywords = ["orm", "query-builder", "database", "sql", "async"]
categories = ["database", "asynchronous"]

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
indexmap = { workspace = true }
smol_str = { workspace = true }
smallvec = { workspace = true }
bumpalo = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
owo-colors = "4.1"
parking_lot = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
pretty_assertions = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "operations_bench"
harness = false

[[bench]]
name = "aggregation_bench"
harness = false

[[bench]]
name = "pagination_bench"
harness = false

[features]
default = []
tracing-subscriber = ["dep:tracing-subscriber"]

